# pybind11_abseil

./: .bazelrc  .gitignore  CMakeLists.txt  MODULE.bazel  README.md
.github/workflows/: amd64_linux_bazel.yml  amd64_linux_cmake.yml  amd64_macos_bazel.yml  amd64_macos_cmake.yml  amd64_windows_bazel.yml  amd64_windows_cmake.yml  arm64_macos_bazel.yml  arm64_macos_cmake.yml  ubuntu-build.yml
cmake/: deps.cmake
cmake/dependencies/: CMakeLists.txt
pybind11_abseil/: BUILD  CMakeLists.txt  pybind11_abseilConfig.cmake.in
pybind11_abseil/compat/: CMakeLists.txt
pybind11_abseil/cpp_capsule_tools/: CMakeLists.txt
pybind11_abseil/requirements/: BUILD
pybind11_abseil/tests/: CMakeLists.txt
scripts/: build_and_run_tests_bazel.sh
